2005-07-31  James Antill  <james@and.org>

	* src/vstr_add_fmt.c (vstr__fmt_write_spec): Use strerror_r() if
	available.

2005-07-26  James Antill  <james@and.org>

	* include/vstr-inline.h (vstr_cmp_fast): Added function.
	(vstr_cmp_fast_buf): Added function.
	(vstr_cmp_fast_cstr): Added function.

	* include/vstr-inline.h (vstr_sc_bmap_init_eq_spn_buf): Added function.
	(vstr_sc_bmap_init_or_spn_buf): Added function.
	(vstr_sc_bmap_init_eq_spn_cstr): Added function.
	(vstr_sc_bmap_init_or_spn_cstr): Added function.

	* src/vstr_spn.c (vstr_spn_bmap_eq_fwd): Added function.
	(vstr_spn_bmap_eq_rev): Added function.
	(vstr_spn_bmap_and_fwd): Added function.
	(vstr_spn_bmap_and_rev): Added function.
	(vstr_cspn_bmap_eq_fwd): Added function.
	(vstr_cspn_bmap_eq_rev): Added function.
	(vstr_cspn_bmap_and_fwd): Added function.
	(vstr_cspn_bmap_and_rev): Added function.

2005-06-23  James Antill  <james@and.org>

	* src/vstr_sub.c (vstr_sub_ptr): Fixed bug when replacing a ref node
	with a pointer node (reference didn't get deleted).
	(vstr_sub_ref): Move reference addition to after possible failure.

2005-04-17  James Antill  <james@and.org>

	* include/vstr-switch.h: Added VSTR_COMPILE_BUILTINS switch.
	(VSTR__AT_COMPILE_STRLEN): Added code to use __builtin_strlen() in GCC.

	* src/vstr.c (vstr_init): Factor the malloc-check APIs out into
	malloc-check.h

	* include/vstr-inline.h (vstr_wrap_memcpy): Do more "inline".
	(vstr_wrap_memcmp): Do more "inline".
	(vstr_wrap_memchr): Do more "inline".
	(vstr_wrap_memset): Do more "inline".

2005-02-16  James Antill  <james@and.org>

	* src/vstr_sc_posix.c (vstr__sc_get_size): Fix loading of zero sized
	files.

2005-01-09  James Antill  <james@and.org>

	* NEWS (2005-01-09): Release 1.0.14

2004-12-15  James Antill  <james@and.org>

	* include/vstr-inline.h (vstr_data_set): Fix gcc extension of allowing
	"return void;".

2004-12-06  James Antill  <james@and.org>
