@@ -142,6 +142,7 @@ baseurl=ftp://ftp.and.org/yum/fc$releasever-james
 	      vstr is now developed in, then it is available using
 <pre>tla register-archive \
     james@and.org--2004-code <a href="ftp://ftp.and.org/pub/james/ARCH-2004-code">ftp://ftp.and.org/pub/james/ARCH-2004-code</a>
+    tla get james@and.org--2004-code/vstr--main--1
 </pre>
               <a href="BUGS">here</a>.
 	    </li>
@@ -156,6 +157,9 @@ baseurl=ftp://ftp.and.org/yum/fc$releasever-james
 	    </li>
             <li> BUGS file can be found
               <a href="BUGS">here</a>
+	    </li>
+            <li> A set of gdb functions, to help with debugging, can be found
+              <a href="gdb_functions.txt">here</a>
 	    </li>
 	  </ul>
 </td></tr></table>
@@ -749,7 +753,7 @@ designed for a traditional String API model.
     <address><a href="mailto:james-web@and.org">James Antill</a></address>
 <!-- Created: Sun Oct 14 20:53:50 EDT 2001 -->
 <!-- hhmts start -->
-Last modified: Tue Aug 23 19:35:13 EDT 2005
+Last modified: Thu Sep 15 02:07:23 EDT 2005
 <!-- hhmts end -->
   </body>
 </html>
