@@ -1,3 +1,8 @@
+2005-09-15  James Antill  <james@and.org>
+
+	* src/vstr_sc_posix.c (VSTR__UIO_MAXDATA): Add work around for moron
+	Linux 2GB limit.
+
 2005-07-31  James Antill  <james@and.org>
 
 	* src/vstr_add_fmt.c (vstr__fmt_write_spec): Use strerror_r() if
